fix nav  z-index

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -6,7 +6,7 @@ nav
 	background-color: #212121
 	position: fixed
 	width: 100%
-	z-index: 2
+	z-index: 3
 
 .menu
 	display: flex
